# BlitzMat

./: CMakeLists.txt  README.md  makefile  notes.txt  setup.py
src/cpp/binding/: opencl_ops_binding.cpp  opencl_ops_binding.hpp
src/cpp/core/: kernel_manager.cpp  operation_manager.cpp
src/cpp/core/include/: kernel_manager.hpp  operation_manager.hpp  operation_types.hpp  pch.hpp
src/cpp/core/kernels/: determinant.cl  elem_add.cl  elem_div.cl  elem_mul.cl  elem_sub.cl  frb_nrm.cl  inverse.cl  mat_mul.cl  trace.cl  transpose.cl
src/python/blitzmat_extension/: __init__.py
tests/cpp/: CMakeLists.txt  test_operations.cpp
